--- a/signApp/package.json
+++ b/signApp/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^5.0.0",
     "react": "17.0.1",
     "react-native": "0.64.0"
   },
